- drop support for installing/configuring 915resolution 
  (no more needed since x11-driver-video-intel 2.0)
- do not configure using xfs anymore (#32051)

Version 0.19 - 9 July 2007, by Pascal "Pixel" Rigaux

- wacom configuration: 
  o enhance configuration by using /dev/input/by-id/xxx
    (need drakxtools-backend >= 10.4.144)
  o add "pad" InputDevice section
- fix displaying "3D hardware acceleration: no" for nvidia proprietary driver
  (#31326)

Version 0.18 - 14 June 2007, by Pascal "Pixel" Rigaux

- handle resolution switch via xrandr without restarting X (#30896)
- add 1366x768, 1360x768 and 1360x765 resolutions
- add big standard resolutions (4/3, 16/10, 16/9)
- [bugfix] fix test message not translated (#30261)
- remove all fglrx options, hopefully default is good enough
  (and at least MonitorLayout option is depreacated as reported on cooker)

Version 0.17 - 9 May 2007, by Pascal "Pixel" Rigaux

- fix using proprietary driver (remove debug code) (thanks to Michael Altizer)

Version 0.16 - 30 April 2007, by Pascal "Pixel" Rigaux

- ask "Do you wish to use proprietary driver" before installing the needed packages
- don't use 1280x1024 prefered resolution (#30069)
  (using prefered resolution only when adding explicit gtf modelines)
- handle new intel driver (including migration from "i810")
- workaround buggy fglrx driver: make dm restart xserver (#29550)

Version 0.15 - 3 April 2007, by Pascal "Pixel" Rigaux

- drakkeyboard & rescue: fix loadkeys_files() for x86_64
- ensure VertRefresh range include 60Hz (for buggy edids, #30094)

Version 0.14 - 23 March 2007, by Pascal "Pixel" Rigaux

- enable Composite by default on nvidia97xx and nvidia96xx 
  (still disabled on nvidia71xx and fglrx) (#29445)

Version 0.13 - 22 March 2007, by Pascal "Pixel" Rigaux

- fix typo making installation discard nvidia driver

Version 0.12 - 22 March 2007, by Pascal "Pixel" Rigaux

- ensure ModulePath is not dropped after changing an option (#29591)
