@@ -143,7 +143,7 @@ my %kind_names = (
     Mouse    => [ qw(DeviceName Protocol Device AlwaysCore Emulate3Buttons Emulate3Timeout EmulateWheel EmulateWheelButton) ], # Subsection in XInput
     Keyboard => [ qw(Protocol Driver XkbModel XkbLayout XkbDisable) ],
     Monitor  => [ qw(Identifier VendorName ModelName HorizSync VertRefresh) ],
-    Device   => [ qw(Identifier VendorName BoardName Chipset Driver VideoRam Screen BusID DPMS power_saver) ],
+    Device   => [ qw(Identifier VendorName BoardName Chipset Driver VideoRam Screen BusID DPMS power_saver AccelMethod MonitorLayout TwinViewOrientation BIOSHotkeys RenderAccel SWCursor XaaNoOffscreenPixmaps) ],
     Display  => [ qw(Depth Modes Virtual) ], # Subsection in Device
     Screen   => [ qw(Identifier Driver Device Monitor DefaultDepth DefaultColorDepth) ],
     InputDevice => [ qw(Identifier Driver Protocol Device Type Mode XkbModel XkbLayout XkbDisable Emulate3Buttons Emulate3Timeout EmulateWheel EmulateWheelButton) ],
