@@ -70,15 +70,15 @@ sub various {
 	if_($::isStandalone, xdm => runlevel() == 5),
 	if_($b_read_existing,
 	    Composite => ($raw_X->get_Section('Extensions') || {})->{Composite},
-	      if_(($card->{Options}{MonitorLayout} || [])->[0] eq '"NONE,CRT+LFP"' ||
-		  ($card->{Options}{TwinViewOrientation} || [])->[0] eq '"Clone"',
+	      if_($card->{Options}{MonitorLayout} eq 'NONE,CRT+LFP' ||
+		  $card->{Options}{TwinViewOrientation} eq 'Clone',
 	    Clone => 1),
-	      if_(($card->{Options}{MonitorLayout} || [])->[0] eq '"LVDS,NONE"',
+	      if_($card->{Options}{MonitorLayout} eq 'LVDS,NONE',
 	    Clone => 0),
 	       if_($card->{Options}{BIOSHotkeys}, 
 	    BIOSHotkeys => 1),
 	      if_($card->{Options}{AccelMethod},
-	    EXA => ($card->{Options}{AccelMethod} || [])->[0] eq '"EXA"'),
+	    EXA => $card->{Options}{AccelMethod} eq 'EXA'),
 	      if_($card->{Driver} eq 'nvidia', 
 	    RenderAccel => !$card->{Options}{RenderAccel},
 	      ),
